[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-port"
version = "0.1.0"
description = "Technical scaffold for the IMS Python port"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "python_port"}

[tool.setuptools.packages.find]
where = ["python_port"]

[tool.pytest.ini_options]
testpaths = ["tests"]
