[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-port"
version = "0.1.0"
description = "Schrittweise Python-Portierung des historischen IMS/ESS-Modells"
readme = "../docs/migration/README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
packages = ["ims", "ims.model", "ims.engine", "ims.io", "ims.analysis"]
description = "Minimal Python scaffold for the IMS/ESS port"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["../tests"]
